--- a/Translations/Interface/Русский.json
+++ b/Translations/Interface/Русский.json
@@ -214,7 +214,7 @@
     "%CLOSE%": "Закрыть",
     "%NEW_ACTION%": "Новое действие",
     "%SELECT_ACTION_TYPE%": "Тип действия",
-    "%CANDY%": "Конфета",
+    "%CANDY%": "Конфет",
     "%LEVEL_UP_SELECTED_POKE%": "Прокачать покемона",
     "%LEVEL_UP_SELECTED_POKE_MAX%": "Прокачать покемона до максимума",
     "%EVOLVE_SELECTED_POKE%": "Эволюционировать Покемона",
