--- a/Translations/Interface/Русский.json
+++ b/Translations/Interface/Русский.json
@@ -263,10 +263,10 @@
     "%DAMAGE_DPS%": "УРОН | УВС",
     "%EVOLVE_CP_AFTER": "CP после эволюции: "
     "%IMPORT_ROUTE%": "Импорт маршрута",
-    "%EXPORT_ROUTE%": "Экспорт мапшрута",
+    "%EXPORT_ROUTE%": "Экспорт маршрута",
     "%IMPOT_EXPORT_ROUTE%": "Импорт/Экспорт маршрута",
     "%IMPORT_INSTRUCTION%": "Введите маршрут, чтобы импортировать его в Catchem, после ввода нажмите кнопку Импорт",
     "%EXPORT_INSTRUCTION%": "Скопируйте нижеприведенный маршрут, чтобы создать резервную копию или поделиться с другими",
-    "%BUSY%" : "Занят"
+    "%BUSY%" : "ЗАНЯТ"
   }
 }
