--- a/Translations/Interface/Русский.json
+++ b/Translations/Interface/Русский.json
@@ -6,23 +6,23 @@
     "%AUTOSTART%": "Автостарт",
     "%AUTO_TUTORIAL%": "Автоматически пройти обучение и установить имя",
     "%USE_PROXY%": "Использовать Прокси",
-    "%EVOLVE_ALL_POKE_ABOVE_IV%": "Эволюционировать покемонов по IV",
-    "%EVOLVE_ALL_POKE_WITH_ENOUGH_CANDY%": "Эволюционировать всех покемонов",
-    "%TRANSFER_DUPLICATE_POKE%": "Удалять дублирующихся покемонов",
-    "%KEEP_POKE_THAT_CAN_EVOLVE%": "Оставлять покемонов которые могут эволюционировать",
-    "%PRIORITIZE_BOTH_TV_AND_CP_FOR_TRANSFER%": "Выбирать покемонов с лучшими IV и CP",
-    "%PRIORITIZE_IV_OVER_CP%": "Выбирать покемонов с лучшим IV",
-    "%RENAME_ONLY_ABOVE_IV%": "Переименовывать покемонов с IV больше",
-    "%RENAME_POKE%": "Переименовывать покемонов",
-    "%AUTO_LEVEL_POKE%": "Авто прокачка покемонов",
-    "%USE_LUCKY_EGGS_WHILE_EVOLVING%": "'Эволюция только с Lucky Egg",
+    "%EVOLVE_ALL_POKE_ABOVE_IV%": "Эволюционировать Покемона если IV больше",
+    "%EVOLVE_ALL_POKE_WITH_ENOUGH_CANDY%": "Эволюционировать всех Покемонов с достаточным кол-вом конфет",
+    "%TRANSFER_DUPLICATE_POKE%": "Отправлять дублирующихся Покемонов",
+    "%KEEP_POKE_THAT_CAN_EVOLVE%": "Оставлять Покемонов которые могут эволюционировать",
+    "%PRIORITIZE_BOTH_TV_AND_CP_FOR_TRANSFER%": "Приоритет И IV И CP для отправки",
+    "%PRIORITIZE_IV_OVER_CP%": "Приоритет IV над CP для отправки",
+    "%RENAME_ONLY_ABOVE_IV%": "Переименовывать Покемонов с IV более чем",
+    "%RENAME_POKE%": "Переименовывать Покемонов",
+    "%AUTO_LEVEL_POKE%": "Авто прокачка Покемонов",
+    "%USE_LUCKY_EGGS_WHILE_EVOLVING%": "Использовать Lucky Egg при эволюции",
     "%USE_EGG_INCUBATORS%": "Использовать инкубаторы",
     "%ALWAYS_PREFFER_LONG_DISTANCE_EGG%": "Предпочитать яйца с большей дистанцией",
-    "%AUTO_FAVORITE_POKE%": "Добавлять покемонов в избранное",
+    "%AUTO_FAVORITE_POKE%": "Добавлять Покемонов в избранное",
     "%USE_ONLY_UNTILITED_INCUBATOR%": "Только бесконечный инкубатор",
     "%HUMANIZE_THROWS%": "Реалистичные броски",
-    "%USE_POKE_NOT_TO_CATCH_FILTER%": "Использовать фильтр 'не ловить'",
-    "%CATCH_WILD_POKE%": "Ловить покемонов",
+    "%USE_POKE_NOT_TO_CATCH_FILTER%": "Использовать фильтр 'Не ловить'",
+    "%CATCH_WILD_POKE%": "Ловить Покемонов",
     "%PAUSE_BOT_ON_MAX_HOURLY_RATES%": "Приостанавливать бота при достижении часового лимита",
     "%LOOT_POKESTOPS%": "Собирать покестопы",
     "%USE_CHEDULE%": "Использовать Расписание",
@@ -33,11 +33,11 @@
     "%USE_MAPZEN_ELEVATION_API%": "Использовать Mapzen Elevation API",
     "%USE_CUSTOM_PATH%": "Использовать заданный маршрут",
     "%RE_RANDOMIZE_DELAY_ON_START%": "Новые случайные задержки при запуске",
-    "%FOLLOW_THE_PLAYER%": "За игроком",
-    "%KEEP_POKE_MARKERS%": "Оставлять маркеры покемонов",
+    "%FOLLOW_THE_PLAYER%": "Следовать за игроком",
+    "%KEEP_POKE_MARKERS%": "Оставлять маркеры Покемонов",
     "%SELECT_BOT_AT_LEFT_MENU%": "Выберите бота в меню слева ",
     "%OR_CREATE_A_NEW_ONE%": "или создайте нового",
-    "%IT_S_A_FREE_BOT%": "Эта программа бесплатна! Если вы её купили, потребуйте возврат денежный средств немедленно!",
+    "%IT_S_A_FREE_BOT%": "Эта программа бесплатна! Если Вы её купили, потребуйте возврат денежных средств немедленно!",
     "%TEST_PROXY%": "Тест прокси",
     "%SCHEDULE%": "Расписание",
     "%GET_DATA_FROM_YOUR_ANDROID%": "Получить данные со своего Андроида",
@@ -45,7 +45,7 @@
     "%CREATE_NEW%": "НОВЫЙ",
     "%SAVE_SETTINGS%": "СОХРАНИТЬ",
     "%CLEAR%": "ОЧИСТИТЬ",
-    "%SAVE_SCHEDULE%": "СОХРАНИТЬ",
+    "%SAVE_SCHEDULE%": "Сохранить расписание",
     "%CANCEL%": "ОТМЕНА",
     "%CP%": "CP",
     "%IV%": "IV",
@@ -57,22 +57,22 @@
     "%AUTH_BOX%": "Аутентификация",
     "%PROXY_WORK%": "Прокси",
     "%POKEBOX%": "Покемоны",
-    "%CATCHBOX%": "Ловля покемонов",
+    "%CATCHBOX%": "Поимка",
     "%ITEMSBOX%": "Предметы",
     "%NAVIGATION_BOX%": "Навигация",
     "%DEVICE_INFO_BOX%": "Устройство",
     "%DELAYS_BOX%": "Задержки",
     "%API_KEYS%": "API ключи",
-    "%AUTH_TYPE%": "Сервис авторизации",
+    "%AUTH_TYPE%": "Тип авторизации",
     "%LOGIN%": "Логин",
     "%PASSWORD%": "Пароль",
     "%DESIRED_NICK%": "Никнейм",
     "%HOST_PORT%": "Хост:порт",
     "%EVOLVE_IV_VALUE%": "Значение IV для эволюции",
-    "%KEEP_MIN_CP%": "Не сохранять покемонов с CP менее",
-    "%KEEP_MIN_DUPLICATE%": "Сохранять минимум покемонов одного вида",
+    "%KEEP_MIN_CP%": "Менять Покемонов на конфеты с CP менее",
+    "%KEEP_MIN_DUPLICATE%": "Оставлять Покемонов одного вида не более, шт",
     "%KEEP_MIN_IV%": "Оставлять с IV не меньше, %",
-    "%PBALLS_POKE%": "Покеболов на покемона",
+    "%PBALLS_POKE%": "Покеболов на Покемона",
     "%RENAME_TEMPLATE%": "Шаблон переименования",
     "%UPGRADE_POKE_CP_MIN%": "Минимальное CP для прокачки",
     "%UPGRADE_POKE_IV_MIN%": "Минимальное IV для прокачки",
@@ -87,10 +87,10 @@
     "%MISS_CHANCE%": "Шанс промаха",
     "%USE_ULTRA_BALL_ABOVE_IV%": "Использовать Ultra Ball если IV больше",
     "%USE_GREAT_BALL_ABOVE_IV%": "Использовать Great Ball если IV больше",
-    "%USE_BERRY_MIN_CP%": "Минимум CP для ягоды",
-    "%USE_BERRY_MIN_IV%": "Минимум IV для ягоды",
-    "%USE_BERRY_BELOW_CATCH_PROBABILITY%": "Использовать ягоду если шанс поймать менее",
-    "%MAX_CATCH_PER_HOUR%": "Максимум покемонов в час",
+    "%USE_BERRY_MIN_CP%": "Минимум CP для исп. Ягод",
+    "%USE_BERRY_MIN_IV%": "Минимум IV для исп. Ягод",
+    "%USE_BERRY_BELOW_CATCH_PROBABILITY%": "Ягода, если шанс поимки менее",
+    "%MAX_CATCH_PER_HOUR%": "Максимум Покемонов в час",
     "%MAX_POKESTOPS_PER_HOUR%": "Максимум покестопов в час",
     "%MAX_XP_PER_HOUR%": "максимум XP в час",
     "%MAX_STARDUST_PER_HOUR%": "Максимум пыли в час",
@@ -98,8 +98,8 @@
     "%AMOUNT_OF_POTIONS_TO_KEEP%": "Кол-во накапливаемых Potions",
     "%AMOUNT_OF_REVIVES_TO_KEEP%": "Кол-во накапливаемых Revive",
     "%AMOUNT_OF_BERRIES_TO_KEEP%": "Кол-во накапливаемых Ягод",
-    "%RECYCLE_AT_USAGE_PERCENTAGE%": "Очистка при заполнени на %",
-    "%TRANSLATION_LANG_CODE%": "Код языка Перевода",
+    "%RECYCLE_AT_USAGE_PERCENTAGE%": "Очистка при наполнени на %",
+    "%TRANSLATION_LANG_CODE%": "Выбор языка консоли",
     "%ALTITUDE_CURRENT%": "Текущая высота",
     "%ALTITUDE_MIN%": "Мин. Высота",
     "%ALTITUDE_MAX%": "Макс. Высота",
@@ -110,7 +110,7 @@
     "%WALKING_SPEED_MIN%": "Мин. Скорость ходьбы (км/ч)",
     "%WALKING_SPEED_MAX%": "Макс. Скорость ходьбы (км/ч)",
     "%ROUTING_SERVICE%": "Сервис маршрутов",
-    "%SELECT_CUSTOM_PATH%": "Вабрать маршрут:",
+    "%SELECT_CUSTOM_PATH%": "Использовать свой маршрут",
     "%DEVICE_ID%": "Id устройства",
     "%ANDROID_BOARD_NAME%": "Android Board Name",
     "%ANDROID_BOOTLOADER%": "Android Bootloader",
@@ -127,15 +127,15 @@
     "%DELAY_BETWEEN_PLAYER_ACTIONS%": "Задержка между действиями игрока",
     "%DELAY_POSTION_CHECK_STATE%": "Задержка проверки позиции",
     "%DELAY_POKESTOP%": "Задержка между покестопами",
-    "%DELAY_CATCH_POKE%": "Задержка поимки покемона",
-    "%DELAY_BETWEEN_POKE_CATCH%": "Задержка между поимками покемонов",
-    "%DELAY_CATCH_NEARBY_POKE%": "Задержка поимки покемона рядом",
-    "%DELAY_CATCH_LURE_POKE%": "Задержка поимки покемонов на Луре",
-    "%DELAY_CATCH_INCENSE_POKE%": "Задержка поимки покемонов на INCENSE",
+    "%DELAY_CATCH_POKE%": "Задержка поимки Покемона",
+    "%DELAY_BETWEEN_POKE_CATCH%": "Задержка между поимками Покемонов",
+    "%DELAY_CATCH_NEARBY_POKE%": "Задержка поимки Покемона рядом",
+    "%DELAY_CATCH_LURE_POKE%": "Задержка поимки Покемонов на Lurе",
+    "%DELAY_CATCH_INCENSE_POKE%": "Задержка поимки Покемонов на INCENSE",
     "%DELAY_EVOLVE_POKE%": "Задержка Эволюции",
     "%DELAY_EVOLVE_VARIATION%": "Вариация эволюции",
     "%DELAY_TRANSFER_POKE%": "задержка отправки",
-    "%DELAY_DISPLAY_POKE%": "Задержка отображения покемона",
+    "%DELAY_DISPLAY_POKE%": "Задержка отображения Покемона",
     "%DELAY_USE_LUCKY_EGG%": "Задержка использования Lucky Egg",
     "%DELAY_SOFTBAN_RETRY%": "Задержка проверки Софтбана",
     "%DELAY_RECYCLE_ITEM%": "Задержка выбрасывания вещей",
@@ -154,8 +154,8 @@
     "%WORKING%": "Работает",
     "%STOPPED%": "Остановлен",
     "%WITH_ACTIONS%": "Действия",
-    "%SPEED_FACTOR%": "Множитель скорости:",
-    "%ZOOM%": "Зум:",
+    "%SPEED_FACTOR%": "Модификатор скорости:",
+    "%ZOOM%": "Увеличение:",
     "%INVENTORY%": "Инвентарь",
     "%STARDUST%": "Пыль",
     "%XP%": "XP",
@@ -165,11 +165,11 @@
     "%EVOLUTIONS%": "Эволюций",
     "%POKESTOPS_VISITS%": "Посещено покестопов",
     "%POKEBALLS_THROWN%": "Броски покеболов",
-    "%POKE_CAPTURED%": "Поймано покемонов",
-    "%POKE_ENCOUNTERED%": "Встречено покемонов",
-    "%POKEDEX_RECORDS%": "В Покедексе",
-    "%ORDERBY%": "СОРТИРОВКА",
-    "%POKE%": "ПОКЕМОНЫ",
+    "%POKE_CAPTURED%": "Поймано Покемонов",
+    "%POKE_ENCOUNTERED%": "Встречено Покемонов",
+    "%POKEDEX_RECORDS%": "записей в Покедекс",
+    "%ORDERBY%": "Сортировка",
+    "%POKE%": "ПокемонЫ",
     "%EGGS%": "ЯЙЦА",
     "%TO_EVOLVE%": "Эволюционировать",
     "%NOT_TO_TRANSFER%": "Не отправлять",
@@ -186,7 +186,7 @@
     "%ROUTE_CREATOR_BTN%": "Маршруты",
     "%TELEGRAM_BTN%": "Telegram",
     "%BOT_INFO_BTN%": "Бот",
-    "%WORLDMAP_BTN%": "МироваяКарта",
+    "%WORLDMAP_BTN%": "Карта мира",
     "%RECYCLE_ITEM%": "Выбросить",
     "%REFRESH_ITEM_LIST%": "Обновить список предметов",
     "%SET_START%": "Установить начало",
@@ -215,35 +215,35 @@
     "%NEW_ACTION%": "Новое действие",
     "%SELECT_ACTION_TYPE%": "Тип действия",
     "%CANDY%": "Конфет",
-    "%LEVEL_UP_SELECTED_POKE%": "Прокачать покемона",
-    "%LEVEL_UP_SELECTED_POKE_MAX%": "Прокачать покемона до максимума",
+    "%LEVEL_UP_SELECTED_POKE%": "Прокачать Покемона",
+    "%LEVEL_UP_SELECTED_POKE_MAX%": "Прокачать Покемона до максимума",
     "%EVOLVE_SELECTED_POKE%": "Эволюционировать Покемона",
     "%RENAME_SELECTED_POKE%": "Переименовать Покемона",
     "%RENAME_DEFAULT_SELECTED_POKE%": "Вернуть стандартное имя",
     "%FAV_UNFAV_SELECTED_POKE%": "Добавить (убрать) в избранные",
-    "%TRANSFER_SELECTED_POKE%": "Обменять покемона на конфеты",
+    "%TRANSFER_SELECTED_POKE%": "Обменять Покемона на конфеты",
     "%AMOUNT%": "Количество: ",
     "%RECYCLE_INPUT%": "Введите количество выбрасываемых предметов",
-    "%USE_LURE_MOD%": "Использовать Лур модуль",
+    "%USE_LURE_MOD%": "Использовать Lur модуль",
     "%POKE_NAME_INPUT%": "Введите новое имя",
     "%SELECT_TEAM_INPUT%": "Выберете команду:",
     "%TAB_SETTINGS%": "Настройки",
     "%TAB_MAP_CONSOLE%": "Карта и консоль",
     "%TAB_PLAYER%": "Игрок",
     "%TAB_POKE%": "Покемоны",
-    "%TAB_POKE_LIST%": "Настройки списков",
-    "%PREFFER_MAPZEN_ROUTING_OVER_GOOGLE%": "Использовать Mapzen вместо Google",
+    "%TAB_POKE_LIST%": "Настройки фильтров",
+    "%PREFFER_MAPZEN_ROUTING_OVER_GOOGLE%": "Выбирать Mapzen Routing Вместо Google",
     "%MANUAL_ROUTE%": "Ручной маршрут",
-    "%SHOW_EXACT_POKE_ON_THE_MAP%": "Показать покемонов на карте",
+    "%SHOW_EXACT_POKE_ON_THE_MAP%": "Показать Покемонов на карте",
     "%NAME%": "Имя:",
     "%BUILD_THE_ROUTE%": "Построить маршрут",
     "%SAVE_THE_ROUTE%": "Сохранить маршрут",
     "%CLEAR_THE_ROUTE%": "Очистить маршрут",
     "%ROUTE_CREATOR%": "Создание маршрутов",
     "%CURRENT_ROUTES%": "Текущие маршруты",
-    "%AUTOSTART_TELEGRAM_BOT%": "Автозапуск Telegram",
+    "%AUTOSTART_TELEGRAM_BOT%": "Автозапуск Telegram бота",
     "%REPORT_LEVELUP%": "Сообщать о повышении уровня",
-    "%AUTO_REPORT_CELECTED_POKE%": "Сообщать о выбранных покемонах",
+    "%AUTO_REPORT_CELECTED_POKE%": "Сообщать о выбранных Покемонах",
     "%TELEGRAM_CONTROL_PAGE%": "Настройка Telegram",
     "%BOT_API_KEY%": "API ключ бота",
     "%OWNERS%": "Владельцы",
@@ -262,5 +262,18 @@
     "%ENERGY%": "Энергия",
     "%DAMAGE_DPS%": "УРОН | УВС",
     "%EVOLVE_CP_AFTER": "CP после эволюции: "
+    "%IMPORT_ROUTE%": "Импорт маршрута",
+    "%EXPORT_ROUTE%": "Экспорт маршрута",
+    "%IMPOT_EXPORT_ROUTE%": "Импорт/Экспорт маршрута",
+    "%IMPORT_INSTRUCTION%": "Введите маршрут, чтобы импортировать его в Catchem, после ввода нажмите кнопку Импорт",
+    "%EXPORT_INSTRUCTION%": "Скопируйте нижеприведенный маршрут, чтобы создать резервную копию или поделиться с другими",
+    "%BUSY%" : "ЗАНЯТ"
+    "%LEVEL_UP%" : "Новый уровень",
+    "%TRANSFER%" : "Трансфер",
+    "%FAVORITE%" : "Избранные",
+    "%ACTION_QUEUE%" : "Очередное действие",
+    "%CAUGHT%" : "Пойманно",
+    "%SEEN%" : "Попалось",
+    "%TOTAL%" : "Всего"
   }
 }
